After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680110 - Crashes when directory search is triggered by type-ahead on desktop root window
Crashes when directory search is triggered by type-ahead on desktop root window
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
0.x.x [obsolete]
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-17 16:30 UTC by Tobias Wolf
Modified: 2012-07-21 15:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't handle search for desktop windows (1.19 KB, patch)
2012-07-21 03:32 UTC, William Jon McCann
committed Details | Review

Description Tobias Wolf 2012-07-17 16:30:19 UTC
$ gdb nautilus
GNU gdb (Linaro GDB) 7.4-2012.06-ubuntu
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
For bug reporting instructions, please see:
<http://bugs.launchpad.net/gdb-linaro/>...
Reading symbols from /usr/bin/nautilus...Reading symbols from /usr/lib/debug/usr/bin/nautilus...done.
done.
(gdb) run
Starting program: /usr/bin/nautilus 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Gtk-Message: Failed to load module "overlay-scrollbar"
[New Thread 0x7fffeb00f700 (LWP 7399)]
[New Thread 0x7fffea80e700 (LWP 7400)]
[New Thread 0x7fffea00d700 (LWP 7401)]
[New Thread 0x7fffe9604700 (LWP 7402)]
[New Thread 0x7fffd0954700 (LWP 7403)]
[New Thread 0x7fffc71b7700 (LWP 7405)]
[New Thread 0x7fffc69b6700 (LWP 7406)]
[New Thread 0x7fffc61b5700 (LWP 7407)]
[New Thread 0x7fffc59b4700 (LWP 7408)]
[New Thread 0x7fffc51b3700 (LWP 7409)]
[New Thread 0x7fffc49b2700 (LWP 7410)]
[Thread 0x7fffc49b2700 (LWP 7410) exited]
[Thread 0x7fffc61b5700 (LWP 7407) exited]
[Thread 0x7fffea00d700 (LWP 7401) exited]
[Thread 0x7fffc51b3700 (LWP 7409) exited]
[Thread 0x7fffc59b4700 (LWP 7408) exited]
[Thread 0x7fffc71b7700 (LWP 7405) exited]
[Thread 0x7fffd0954700 (LWP 7403) exited]
[Thread 0x7fffc69b6700 (LWP 7406) exited]

(nautilus:7396): GLib-GObject-CRITICAL **: g_object_ref: assertion `G_IS_OBJECT (object)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed

(nautilus:7396): Gdk-CRITICAL **: gdk_window_get_device_events: assertion `GDK_IS_WINDOW (window)' failed
**
ERROR:nautilus-window-slot.c:71:sync_search_directory: assertion failed: (NAUTILUS_IS_SEARCH_DIRECTORY (directory))

Program received signal SIGABRT, Aborted.
0x00007ffff3bd9445 in raise () from /lib/x86_64-linux-gnu/libc.so.6
(gdb) bt
  • #0 raise
    from /lib/x86_64-linux-gnu/libc.so.6
  • #1 abort
    from /lib/x86_64-linux-gnu/libc.so.6
  • #2 g_assertion_message
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #3 g_assertion_message_expr
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #4 sync_search_directory
    at nautilus-window-slot.c line 71
  • #5 report_callback
    at nautilus-window-manage-views.c line 558
  • #6 got_file_info_for_view_selection_callback
    at nautilus-window-manage-views.c line 868
  • #7 nautilus_window_slot_open_location_full
    at nautilus-window-manage-views.c line 528
  • #8 create_new_search
    at nautilus-window-slot.c line 105
  • #9 query_editor_changed_callback
    at nautilus-window-slot.c line 140
  • #10 ffi_call_unix64
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #11 ffi_call
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #12 g_cclosure_marshal_generic
    from /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
  • #13 g_closure_invoke
    from /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
  • #14 ??
    from /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
  • #15 g_signal_emit_valist
    from /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
  • #16 g_signal_emit
    from /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0
  • #17 nautilus_query_editor_changed_force
    at nautilus-query-editor.c line 1078
  • #18 nautilus_query_editor_changed_force
    at nautilus-query-editor.c line 1085
  • #19 nautilus_query_editor_changed
    at nautilus-query-editor.c line 1086
  • #20 typing_timeout_cb
    at nautilus-query-editor.c line 341
  • #21 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #22 g_main_context_dispatch
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #23 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #24 g_main_context_iteration
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #25 g_application_run
    from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
  • #26 main
    at nautilus-main.c line 103

Comment 1 Tobias Wolf 2012-07-17 17:04:31 UTC
I installed some more dbg packages

(gdb) bt
  • #0 raise
    from /lib/x86_64-linux-gnu/libc.so.6
  • #1 abort
    from /lib/x86_64-linux-gnu/libc.so.6
  • #2 g_assertion_message
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gtestutils.c line 1861
  • #3 g_assertion_message_expr
  • #4 sync_search_directory
    at nautilus-window-slot.c line 71
  • #5 report_callback
    at nautilus-window-manage-views.c line 558
  • #6 got_file_info_for_view_selection_callback
    at nautilus-window-manage-views.c line 868
  • #7 nautilus_window_slot_open_location_full
    at nautilus-window-manage-views.c line 528
  • #8 create_new_search
    at nautilus-window-slot.c line 105
  • #9 query_editor_changed_callback
    at nautilus-window-slot.c line 140
  • #10 ffi_call_unix64
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #11 ffi_call
    from /usr/lib/x86_64-linux-gnu/libffi.so.6
  • #12 g_cclosure_marshal_generic
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gobject/gclosure.c line 1454
  • #13 g_closure_invoke
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gobject/gclosure.c line 777
  • #14 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gobject/gsignal.c line 3551
  • #15 g_signal_emit_valist
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gobject/gsignal.c line 3300
  • #16 g_signal_emit
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gobject/gsignal.c line 3356
  • #17 nautilus_query_editor_changed_force
    at nautilus-query-editor.c line 1078
  • #18 nautilus_query_editor_changed_force
    at nautilus-query-editor.c line 1085
  • #19 nautilus_query_editor_changed
    at nautilus-query-editor.c line 1086
  • #20 typing_timeout_cb
    at nautilus-query-editor.c line 341
  • #21 g_timeout_dispatch
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gmain.c line 4002
  • #22 g_main_dispatch
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gmain.c line 2691
  • #23 g_main_context_dispatch
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gmain.c line 3195
  • #24 g_main_context_iterate
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gmain.c line 3266
  • #25 g_main_context_iteration
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./glib/gmain.c line 3327
  • #26 g_application_run
    at /build/buildd/glib2.0-2.33.4~git20120713.160da82e/./gio/gapplication.c line 1607
  • #27 main
    at nautilus-main.c line 103

Comment 2 William Jon McCann 2012-07-21 03:32:25 UTC
Created attachment 219366 [details] [review]
Don't handle search for desktop windows
Comment 3 Cosimo Cecchi 2012-07-21 14:52:39 UTC
Review of attachment 219366 [details] [review]:

Looks good, thanks!