Don't handle search for desktop windows

https://bugzilla.gnome.org/show_bug.cgi?id=680110